--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -10,6 +10,8 @@ doctrine:
         use_savepoints: true
     orm:
         auto_generate_proxy_classes: true
+        controller_resolver:
+            auto_mapping: true
         enable_lazy_ghost_objects: true
         report_fields_where_declared: true
         validate_xml_mapping: true
